--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="500px"
                 width="300px"
-                src="assets/profile2.jpg"
+                src="assets/profile.jpg"
                 sporalt="Profile Image"
               />
             </div>
