--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <title>Robin Wassink | My portfolio </title>
     <meta name="keywords" content="Robin, Wassink" />
     <meta name="description" content="Hey, my name is Robin Wassink and I'm a software developer from Switzerland. Have a look at my portfolio!" />
-
+   
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="./styles.scss" />
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
